[metadata]
name = visyerres_sgdf_woob
version = attr: visyerres_sgdf_woob.version.version
url = https://github.com/cakeisalie5/visyerres_sgdf_woob
author = Thomas Touhey
author_email = thomas@touhey.fr
description = woob modules for Scouts et Guides de France
long_description = file: README.rst
keywords = sgdf, intranet, woob
license = MIT

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.9

[options.package_data]
* = *.txt, *.rst

[build_sphinx]
source-dir = docs

[wheel]
universal = True

[flake8]
ignore = D105,D107,D202,D208,D210,D401,T484,T499,W503
exclude =
  docs/conf.py
  test*.py
per-file-ignores =
  tests/*:F405,S101,D102,D103
  visyerres_sgdf_woob/mshtml.py:FS001
  visyerres_sgdf_woob/modules/*:D101,D102,D106
rst-roles =
  py:class
  py:attr
  py:data
  py:meth
rst-directives =
  py:data
